--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  provider: ^4.0.1
+  http: ^0.12.2
+  shared_preferences: ^0.5.12+4
+  fish_redux: ^0.3.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  provider: ^4.0.1
-  http: ^0.12.2
-  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
